[metadata]
name = greenstalk
version = attr: greenstalk.__version__
author = Justin Mayhew
author_email = mayhew@live.ca
description = A Python 3 client for the beanstalkd work queue
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/justinmayhew/greenstalk
license = MIT
license_files = LICENSE
project_urls =
    Documentation = https://greenstalk.readthedocs.io/
    Source = https://github.com/justinmayhew/greenstalk
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = greenstalk
package_dir =
    greenstalk = src/greenstalk

[options.package_data]
greenstalk = py.typed

[flake8]
max-line-length = 90
